--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h1>Você sabe o que é a Bolsa de Valores?</h1>
                 <p>A bolsa de valores é um mercado organizado onde investidores compram e vendem valores mobiliários, como ações e títulos. Funciona através de corretoras que facilitam as transações entre compradores e vendedores. O preço das ações é determinado pela oferta e demanda. Ela desempenha um papel fundamental no financiamento empresarial e oferece oportunidades de investimento, mas também apresenta riscos, incluindo volatilidade e riscos específicos de empresa. É essencial que os investidores compreendam esses riscos antes de participar do mercado de ações.</p>
 
-                <button class="btn-1"> Realizar teste de aptidão para investidor </button>
+                <button class="btn-1"><a href="./index2.html"> Realizar teste de aptidão para investidor </a></button>
               
             </div>
         </section>
