--- a/index.html
+++ b/index.html
@@ -235,10 +235,12 @@
                 <h1> NASDAQ (National Association of Securities Dealers Automated Quotations)</h1>
                 <hr>
 
-                <p>Fundada em 1971, a NASDAQ é conhecida por listar muitas empresas de tecnologia e inovação.
+                <p style="margin-bottom: 12px;">Fundada em 1971, a NASDAQ é conhecida por listar muitas empresas de tecnologia e inovação.
                     É uma bolsa de valores eletrônica, caracterizada por sua plataforma de negociação totalmente eletrônica.
                     Negocia principalmente ações de empresas de tecnologia, biotecnologia, telecomunicações e outras indústrias relacionadas.</p>
                     <br>
+                    <br>
+                
                 
                 <button  class="btn"><a href="https://www.nasdaq.com/" target="_blank">Conhecer</a>    </button>
             </div>
