--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <div class="intro-texto">
                     <h1>Você sabe o que é a bolsa de valores?</h1>
                     <p>A bolsa de valores é um mercado organizado onde são negociados investimentos financeiros, como ações de empresas, títulos públicos e privados, commodities e derivativos. Funciona como um ambiente de compra e venda, onde os investidores podem adquirir participações em empresas (no caso das ações) ou contratos que derivam de outros ativos (no caso dos derivativos), lucrando com a valorização dos ativos ao longo do tempo. As transações na bolsa são intermediadas por corretoras de valores e ocorrem de forma eletrônica, fornecimento líquido e transparência ao mercado. Os preços dos ativos são determinados pela oferta e demanda, influenciados por uma série de fatores, como notícias econômicas, desempenho das empresas e condições macroeconômicas. Investir na bolsa de valores oferece oportunidades de ganhos, mas também envolve riscos, exigindo conhecimento e estratégia por parte dos investidores.</p>
+                    
                 </div>
 
             </div>
@@ -112,8 +113,8 @@
                                     <h3>Gráfico de Candlestick</h3>
                                     <p>Similar ao gráfico de barras, mas visualmente mais atraente e informativo.
                                         Cada "candlestick" representa o preço de abertura, fechamento, máximo e mínimo de um ativo em um determinado período.
-                                        A cor e a forma do "candlestick" indicam se o preço aumentou ou diminuiu durante o período. Por exemplo, um candlestick verde geralmente indica que o preço de fechamento foi mais alto do que o de abertura, enquanto um candlestick vermelho indica o oposto.
-                                        É amplamente utilizado para identificar padrões de reversão e continuação de tendências, bem como para tomar decisões de compra e venda.</p>
+                                        A cor e a forma do "candlestick" indicam se o preço aumentou ou diminuiu durante o período.Um candlestick verde indica que o preço de fechamento foi mais alto do que o de abertura, enquanto o candlestick vermelho indica o oposto.
+                                        É amplamente utilizado para identificar padrões de reversão e continuação de tendências.</p>
                         
                                     </div>
                                 </div>
