--- a/index.html
+++ b/index.html
@@ -157,9 +157,9 @@
             <div class="container-teste">
 
                 <div class="teste-intro">
-                    <h3>Agora que você já tem um conhecimento básico sobre como funciona uma bolsa de valores, é hora de testar seus conhecimentos?</h3>
+                    <h3>Agora que você já tem um conhecimento básico sobre como funciona uma bolsa de valores, é hora de testar seus conhecimentos!</h3>
                     <h4>Criamos um teste simples de aptião para investidor.</h4>
-                    <h4>Se desafie a testar seus conhecimentos</h4>
+                    <h4>Se desafie a testar seus conhecimentos. </h4>
                     <button> <a href="#">Realizar Teste</a></button>
                 </div>
 
